# steamfetch

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  generate_changelog.sh  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  config.rs  display.rs  image_display.rs  main.rs  test_support.rs
src/steam/: client.rs  error.rs  mod.rs  models.rs  native.rs
tests/: cli.rs
