[package]
name = "steamfetch"
version = "0.2.6"
edition = "2021"
description = "neofetch for Steam - Display your Steam stats in terminal"
authors = ["unhappychoice"]
license = "ISC"
repository = "https://github.com/unhappychoice/steamfetch"
keywords = ["steam", "cli", "terminal", "neofetch"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
steamworks = { version = "0.12", features = ["raw-bindings"] }
libloading = "0.8"
