[package]
name = "steamfetch"
version = "0.5.5"
edition = "2021"
description = "neofetch for Steam - Display your Steam stats in terminal"
authors = ["unhappychoice"]
license = "ISC"
repository = "https://github.com/unhappychoice/steamfetch"
keywords = ["steam", "cli", "terminal", "neofetch"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
dirs = "6"
colored = "3"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
steamworks = { version = "0.13", features = ["raw-bindings"] }
libloading = "0.8"
indicatif = "0.18"
image = "0.25"
icy_sixel = "0.5"
base64 = "0.22.1"
libc = "0.2.186"
terminal_size = "0.4"
unicode-width = "0.2.2"
